syntax = "proto3";
package dbmanager;
option go_package = "github.com/yujisoyama/go_microservices/pkg/pb/dbmanager";

import "pkg/protos/user/user.proto";

service DbManager {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc UpsertUser(UpsertUserRequest) returns (UpsertUserResponse);
}

message PingRequest {}
message PingResponse {}

message UpsertUserRequest {
  user.User user = 1;
}

message UpsertUserResponse {
  user.User user = 1;
}