syntax = "proto3";
package user;
option go_package = "github.com/yujisoyama/go_microservices/pkg/pb/user";

message User {
  string id = 1;
  string oauth_id = 2;
  string oauth_type = 3;
  string email = 4;
  bool verified_email = 5;
  string first_name = 6;
  string last_name = 7;
  string picture = 8;
  string created_at = 9;
  string updated_at = 10;
  string deleted_at = 11;
}